fixed colour contrast issues

--- a/assets/gdpr-plugin/gdpr-styles.css
+++ b/assets/gdpr-plugin/gdpr-styles.css
@@ -13,7 +13,7 @@
     vertical-align: middle;
 }
 .gdpr-block label {
-    color: #a7a7a7;
+    color: #666;
     vertical-align: middle;
     user-select: none;
     margin-bottom: 0;
